--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "A project to showcase workflows",
   "main": "index.js",
-  
   "repository": {
     "type": "git",
     "url": "?.git"
   },
   "author": "Jon Warnes",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7"
+  }
 }
